@@ -1,3 +1,7 @@
+2001-02-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* src/locale.cc: Remove bogus locale::id definitions.
+
 2001-02-11  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
 
 	* include/bits/std_valarray.h: #undef _DEFINE_LOGICAL_OPERATOR,
